WB-211: routing and auth improvement
Squashed commit of the following:

commit 239bca857df7103cbf623f13d7a099e971b23515
Author: dk96hz <95834129+dk96hz@users.noreply.github.com>
Date:   Fri Jan 10 13:41:13 2025 +0000

    WB-211: added routes to notification emails

commit b120f5fc343317c3413f0d47a822258221e730da
Merge: cfd5ff6 e84872b
Author: dk96hz <95834129+dk96hz@users.noreply.github.com>
Date:   Tue Jan 7 20:20:35 2025 +0000

    Merge branch 'develop' into feature/WB-211

    # Conflicts:
    #	src/main/java/org/scouts105bentaya/core/exception/GlobalControllerInternalExceptionHandler.java

commit cfd5ff6554ba5f577689952e9c53d7fc55efc318
Author: dk96hz <95834129+dk96hz@users.noreply.github.com>
Date:   Tue Jan 7 19:56:12 2025 +0000

    WB-211: fixed ical description

commit d94d69d2f75415e9f7f2a2dd1ad6babed7b75097
Author: dk96hz <95834129+dk96hz@users.noreply.github.com>
Date:   Sat Dec 28 19:07:42 2024 +0100

    WB-211: working on ics calendar

commit cd9c4515b931fc247ccec517a4d7837b7a95dec3
Author: dk96hz <95834129+dk96hz@users.noreply.github.com>
Date:   Wed Dec 25 02:50:20 2024 +0100

    WB-211: added user form dto and changed how user is saved

commit 2a873208f7eaed26b1b1781b8fad114d1e5c51e7
Author: dk96hz <95834129+dk96hz@users.noreply.github.com>
Date:   Tue Dec 24 23:28:04 2024 +0100

    WB-211: added UserProfile dto

commit 31395bb2938a63414eda4239a1f00655c616a85e
Author: dk96hz <95834129+dk96hz@users.noreply.github.com>
Date:   Mon Dec 23 23:33:57 2024 +0100

    WB-211: added header when user is not authenticated but route is public

commit fdd8416b1142994b25281d3842ab2c9cb930234b
Author: dk96hz <95834129+dk96hz@users.noreply.github.com>
Date:   Sat Dec 21 00:01:31 2024 +0000

    WB-211: WIP